# aws-otel-python-instrumentation

./: .codespellrc  .coveragerc  .coveragerc-py314  .coveragerc-py39  .flake8  .gitignore  .isort.cfg  .pylintrc  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  THIRD-PARTY-LICENSES  client.py  dev-requirements.txt  eachdist.ini  image-requirements.txt  layer-note  log.txt  pyproject.toml  release-build-metadata.json  server_automatic_s3client.py  test.py  test_crewai_keys_instrumented.py  test_lambda.py  tox.ini
aws-opentelemetry-application-signals/: .coveragerc  README.rst  pyproject.toml
aws-opentelemetry-application-signals/src/amazon/opentelemetry/application_signals/: __init__.py
aws-opentelemetry-application-signals/tests/application_signals/internal/: test_aws_metric_attribute_generator.py  test_aws_span_processing_util.py  test_regional_resource_arn_parser.py  test_sqs_url_parsers.py
aws-opentelemetry-application-signals/tests/application_signals/processor/: test_attribute_propagating_span_processor.py  test_attribute_propagating_span_processor_builder.py  test_aws_metric_attributes_span_processor.py  test_aws_span_metrics_processor.py  test_aws_span_metrics_processor_builder.py
aws-opentelemetry-application-signals/tests/application_signals/sampler/: test_always_record_sampler.py
aws-opentelemetry-distro/: .coveragerc  README.md  README.rst  pyproject.toml
aws-opentelemetry-distro/src/amazon/opentelemetry/distro/: _aws_attribute_keys.py  _aws_metric_attribute_generator.py  _aws_resource_attribute_configurator.py  _aws_span_processing_util.py  _botocore_patches.py  _delegating_readable_span.py  _instrumentation_patch.py  _resource_detector_patches.py  _utils.py  always_record_sampler.py  attribute_propagating_span_processor.py  attribute_propagating_span_processor_builder.py  aws_always_record_sampler.py  aws_attribute_propagating_span_processor.py  aws_attribute_propagating_span_processor_builder.py  aws_batch_unsampled_span_processor.py  aws_lambda_span_processor.py  aws_metric_attributes_span_exporter.py  aws_metric_attributes_span_exporter_builder.py  aws_opentelemetry_configurator.py  aws_opentelemetry_distro.py  aws_span_metrics_processor.py  aws_span_metrics_processor_builder.py  gen_ai_nested_client_span_processor.py  llo_handler.py  llo_sender_client.py  metric_attribute_generator.py  opentelemetry_lite_sdk.py  otlp_aws_logs_exporter.py  otlp_aws_span_exporter.py  otlp_sigv4_exporter.py  otlp_udp_exporter.py  regional_resource_arn_parser.py  scope_based_exporter.py  scope_based_filtering_view.py  sqs_url_parser.py  version.py
aws-opentelemetry-distro/tests/amazon/opentelemetry/distro/: test_always_record_sampler.py  test_attribute_propagating_span_processor.py  test_attribute_propagating_span_processor_builder.py  test_aws_always_record_sampler.py  test_aws_auth_session.py  test_aws_batch_unsampled_span_processor.py  test_aws_lambda_span_processor.py  test_aws_metric_attribute_generator.py  test_aws_metric_attributes_span_exporter.py  test_aws_metric_attributes_span_exporter_builder.py  test_aws_opentelementry_configurator.py  test_aws_opentelemetry_distro.py  test_aws_span_metrics_processor.py  test_aws_span_metrics_processor_builder.py  test_aws_span_processing_util.py  test_aws_span_processing_util_helper.py  test_aws_tracer_configurer.py  test_basic.py  test_code_correlation.py  test_delegating_readable_span.py  test_gen_ai_nested_client_span_processor.py  test_instrumentation_patch.py  test_lite_sdk_lambda.py  test_llo_handler.py  test_mcpinstrumentor.py  test_opentelemetry_lite_sdk.py  test_otlp_aws_exporter.py  test_otlp_aws_span_exporter.py  test_otlp_sigv4_exporter.py  test_otlp_udp_exporter.py  test_regional_resource_arn_parser.py  test_scope_based_exporter.py  test_scope_based_filtering_view.py  test_sqs_url_parsers.py  test_utils.py  test_version.py
aws-opentelemetry-serviceevents/: .coveragerc  README.rst  pyproject.toml
aws-opentelemetry-serviceevents/src/amazon/opentelemetry/serviceevents/: __init__.py  ast_transformation.py  config.py  version.py  (+3 more)
aws-opentelemetry-serviceevents/tests/serviceevents/: test_ast_transformation.py  test_direct_cw_otlp.py  test_python_monitor.py  test_serviceevents_config.py  test_serviceevents_get_code_docstring.py  test_serviceevents_instrumentation.py  test_serviceevents_package_init.py
aws-opentelemetry-serviceevents/tests/serviceevents/collectors/: test_base_collector.py  test_deployment_event_collector.py  test_endpoint_collector.py  test_incident_snapshot_collector.py
aws-opentelemetry-serviceevents/tests/serviceevents/exporter/: test_cloudwatch_file_exporter.py  test_otlp_contract.py  test_otlp_emitter.py
aws-opentelemetry-serviceevents/tests/serviceevents/instrumentation/: test_django_instrumentation.py  test_fastapi_instrumentation.py  test_flask_instrumentation.py
aws-opentelemetry-serviceevents/tests/serviceevents/models/: test_models.py
aws-opentelemetry-serviceevents/tests/serviceevents/utils/: test_instance_id.py  test_seh_histogram.py
aws-otel-distro/: README.rst  pyproject.toml
aws-otel-distro/src/opentelemetry/distro/: __init__.py  aws_distro.py
aws-otel-distro/tests/: test_aws_distro.py
contract-tests/images/applications/requests/: Dockerfile  pyproject.toml  requests_server.py  requirements.txt
contract-tests/images/mock-collector/: Dockerfile  mock_collector_client.py  mock_collector_logs_service.py  mock_collector_metrics_service.py  mock_collector_server.py  mock_collector_service.py  mock_collector_trace_service.py  pyproject.toml  requirements.txt
contract-tests/images/mock-collector/protos/: mock_collector_service.proto
contract-tests/tests/: pyproject.toml
exporters/aws-otel-otlp-udp-exporter/: README.rst  pyproject.toml
exporters/aws-otel-otlp-udp-exporter/tests/: test_exporter.py
exporters/aws-otel-otlp-udp-exporter/validation-app/: app.py
opentelemetry-distro/: README.rst  pyproject.toml
opentelemetry-distro/src/opentelemetry/distro/: aws_opentelemetry_configurator.py  version.py
opentelemetry-distro/tests/: test_aws_distro.py
(+745 files in other folders)
