[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aws-opentelemetry-application-signals"
dynamic = ["version"]
description = "AWS OpenTelemetry Application Signals"
readme = "README.rst"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
  { name = "Amazon Web Services" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "opentelemetry-api >= 1.39, < 2.0",
  "opentelemetry-sdk >= 1.39, < 2.0",
  "opentelemetry-exporter-otlp-proto-http >= 1.39, < 2.0",
]

[project.urls]
Homepage = "https://github.com/aws-observability/aws-otel-python-instrumentation/tree/main/aws-opentelemetry-application-signals"

[tool.hatch.version]
path = "src/amazon/opentelemetry/application_signals/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amazon"]
