[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aws-opentelemetry-distro"
dynamic = ["version"]
description = "AWS OpenTelemetry Python Distro"
readme = "README.rst"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
authors = [
  { name = "Amazon Web Services" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]

dependencies = [
  "opentelemetry-api == 1.39.1",
  "opentelemetry-sdk == 1.39.1",
  "opentelemetry-exporter-otlp-proto-grpc == 1.39.1",
  "opentelemetry-exporter-otlp-proto-http == 1.39.1",
  "opentelemetry-propagator-b3 == 1.39.1",
  "opentelemetry-propagator-jaeger == 1.39.1",
  "opentelemetry-exporter-otlp-proto-common == 1.39.1",
  "opentelemetry-sdk-extension-aws == 2.1.0",
  "opentelemetry-propagator-aws-xray == 1.0.2",
  "opentelemetry-distro == 0.60b1",
  "opentelemetry-processor-baggage == 0.60b1",
  "opentelemetry-propagator-ot-trace == 0.60b1",
  "opentelemetry-instrumentation == 0.60b1",
  "opentelemetry-instrumentation-aws-lambda == 0.60b1",
  "opentelemetry-instrumentation-aio-pika == 0.60b1",
  "opentelemetry-instrumentation-aiohttp-client == 0.60b1",
  "opentelemetry-instrumentation-aiokafka == 0.60b1",
  "opentelemetry-instrumentation-aiopg == 0.60b1",
  "opentelemetry-instrumentation-asgi == 0.60b1",
  "opentelemetry-instrumentation-asyncpg == 0.60b1",
  "opentelemetry-instrumentation-boto == 0.60b1",
  "opentelemetry-instrumentation-boto3sqs == 0.60b1",
  "opentelemetry-instrumentation-botocore == 0.60b1",
  "opentelemetry-instrumentation-celery == 0.60b1",
  "opentelemetry-instrumentation-confluent-kafka == 0.60b1",
  "opentelemetry-instrumentation-dbapi == 0.60b1",
  "opentelemetry-instrumentation-django == 0.60b1",
  "opentelemetry-instrumentation-elasticsearch == 0.60b1",
  "opentelemetry-instrumentation-falcon == 0.60b1",
  "opentelemetry-instrumentation-fastapi == 0.60b1",
  "opentelemetry-instrumentation-flask == 0.60b1",
  "opentelemetry-instrumentation-grpc == 0.60b1",
  "opentelemetry-instrumentation-httpx == 0.60b1",
  "opentelemetry-instrumentation-jinja2 == 0.60b1",
  "opentelemetry-instrumentation-kafka-python == 0.60b1",
  "opentelemetry-instrumentation-logging == 0.60b1",
  "opentelemetry-instrumentation-mysql == 0.60b1",
  "opentelemetry-instrumentation-mysqlclient == 0.60b1",
  "opentelemetry-instrumentation-pika == 0.60b1",
  "opentelemetry-instrumentation-psycopg2 == 0.60b1",
  "opentelemetry-instrumentation-pymemcache == 0.60b1",
  "opentelemetry-instrumentation-pymongo == 0.60b1",
  "opentelemetry-instrumentation-pymysql == 0.60b1",
  "opentelemetry-instrumentation-pyramid == 0.60b1",
  "opentelemetry-instrumentation-redis == 0.60b1",
  "opentelemetry-instrumentation-remoulade == 0.60b1",
  "opentelemetry-instrumentation-requests == 0.60b1",
  "opentelemetry-instrumentation-sqlalchemy == 0.60b1",
  "opentelemetry-instrumentation-sqlite3 == 0.60b1",
  "opentelemetry-instrumentation-starlette == 0.60b1",
  "opentelemetry-instrumentation-system-metrics == 0.60b1",
  "opentelemetry-instrumentation-tornado == 0.60b1",
  "opentelemetry-instrumentation-tortoiseorm == 0.60b1",
  "opentelemetry-instrumentation-urllib == 0.60b1",
  "opentelemetry-instrumentation-urllib3 == 0.60b1",
  "opentelemetry-instrumentation-wsgi == 0.60b1",
  "opentelemetry-instrumentation-cassandra == 0.60b1",
  "cachetools == 6.2.4",
  "protobuf == 6.33.5",
  "pyyaml == 6.0.3",
]

[project.optional-dependencies]
# The 'patch' optional dependency is used for applying patches to specific libraries.
# If a new patch is added into the list, it must also be added into tox.ini, dev-requirements.txt and _instrumentation_patch
patch = [
  "botocore ~= 1.0",
]
test = []

[project.entry-points.opentelemetry_configurator]
aws_configurator = "amazon.opentelemetry.distro.aws_opentelemetry_configurator:AwsOpenTelemetryConfigurator"

[project.entry-points.opentelemetry_distro]
aws_distro = "amazon.opentelemetry.distro.aws_opentelemetry_distro:AwsOpenTelemetryDistro"

[project.entry-points.opentelemetry_instrumentor]
crewai = "amazon.opentelemetry.distro.instrumentation.crewai:CrewAIInstrumentor"
llama-index = "amazon.opentelemetry.distro.instrumentation.llama_index:LlamaIndexInstrumentor"

[project.urls]
Homepage = "https://github.com/aws-observability/aws-otel-python-instrumentation/tree/main/aws-opentelemetry-distro"

[tool.hatch.version]
path = "src/amazon/opentelemetry/distro/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amazon"]
