[build-system]
requires = ["hatchling==1.25.0"]
build-backend = "hatchling.build"

[project]
name = "aws-opentelemetry-serviceevents"
dynamic = ["version"]
description = "AWS OpenTelemetry ServiceEvents Instrumentation"
readme = "README.rst"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
authors = [
  { name = "Amazon Web Services" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]

dependencies = [
  "opentelemetry-api >= 1.39, < 2.0",
  "opentelemetry-sdk >= 1.39, < 2.0",
  "opentelemetry-exporter-otlp-proto-http >= 1.39, < 2.0",
  "opentelemetry-instrumentation >= 0.60b0",
  "aws-opentelemetry-application-signals == 0.18.0.dev0",
  "zstandard >= 0.22, < 1.0",
]

[project.entry-points.opentelemetry_instrumentor]
service_events = "amazon.opentelemetry.serviceevents.serviceevents_instrumentation:ServiceEventsInstrumentor"

[project.entry-points.opentelemetry_post_instrument]
service_events = "amazon.opentelemetry.serviceevents.serviceevents_instrumentation:ServiceEventsInstrumentor.post_instrument"

[project.urls]
Homepage = "https://github.com/aws-observability/aws-otel-python-instrumentation/tree/main/aws-opentelemetry-serviceevents"

[tool.hatch.version]
path = "src/amazon/opentelemetry/serviceevents/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amazon"]
