[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-opentelemetry-distro"
dynamic = ["version"]
description = "AWS OpenTelemetry Python Distro"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.7"

dependencies = [
  "opentelemetry-api ~= 1.12",
  "opentelemetry-instrumentation == 0.43b0",
  "opentelemetry-sdk ~= 1.13",
  "opentelemetry-sdk-extension-aws ~= 2.0.1"
]

[project.optional-dependencies]
test = []

[project.entry-points.opentelemetry_configurator]
aws_configurator = "opentelemetry.distro.aws_opentelemetry_configurator:AwsOpenTelemetryConfigurator"

[project.entry-points.opentelemetry_distro]
aws_distro = "opentelemetry.distro.aws_opentelemetry_distro:AwsOpenTelemetryDistro"

[project.urls]
Homepage = "https://github.com/aws-observability/aws-otel-python-instrumentation/tree/main/opentelemetry-distro"

[tool.hatch.version]
path = "src/amazon/opentelemetry/distro/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/amazon/opentelemetry"]
