[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "contract-tests"
description = "Contract tests for AWS OTEL Python Instrumentation"
version = "1.0.0"
license = "Apache-2.0"
requires-python = ">=3.8"

dependencies = [
    "opentelemetry-proto==1.22.0",
    "opentelemetry-sdk==1.22.0",
    "testcontainers==3.7.1",
    "grpcio==1.60.0",
    "docker==7.0.0",
    "mock-collector==1.0.0"
]

[project.optional-dependencies]
test = []

[tool.hatch.build.targets.sdist]
include = ["/test"]

[tool.hatch.build.targets.wheel]
packages = ["test/amazon"]
