[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mock-collector"
description = "Mock Collector used by contract tests for AWS OTEL Python Instrumentation"
version = "1.0.0"
license = "Apache-2.0"
requires-python = ">=3.9"

dependencies = [
    "grpcio ~= 1.66.0",
    "opentelemetry-proto==1.33.1",
    "opentelemetry-sdk==1.33.1",
    "protobuf==5.26.1",
    "typing-extensions==4.12.2"
]

[tool.hatch.build.targets.sdist]
include = ["*.py"]

[tool.hatch.build.targets.wheel]
include = ["*.py"]
