[project]
name = "requests-server"
description = "Simple server that relies on requests library"
version = "1.0.0"
license = "Apache-2.0"
requires-python = ">=3.8"

dependencies = [
    "opentelemetry-distro==0.43b0",
    "opentelemetry-exporter-otlp-proto-grpc==1.22.0",
    "typing-extensions==4.9.0",
    "requests==2.31.0"
]