[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amazon-opentelemetry-distro-mcpinstrumentor"
version = "0.1.0"
description = "OpenTelemetry MCP instrumentation for AWS Distro"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "Johnny Lin", email = "jonzilin@amazon.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "mcp",
  "opentelemetry-api",
  "opentelemetry-instrumentation",
  "opentelemetry-sdk",
  "opentelemetry-semantic-conventions",
  "wrapt"
]

[project.optional-dependencies]
instruments = ["mcp"]

[project.entry-points.opentelemetry_instrumentor]
mcp = "mcpinstrumentor:MCPInstrumentor"

[tool.hatch.build.targets.sdist]
include = [
  "mcpinstrumentor.py",
  "README.md"
]

[tool.hatch.build.targets.wheel]
packages = ["."]